src/main/java/com/example/algoproject/errors/response/ListResponse.java
package com.example.algoproject.errors.response;

import lombok.Getter;

import java.util.List;

@Getter
public class ListResponse<T> extends CommonResponse {
    List<T> data;
}
